--- a/.github/workflows/update-komica.yml
+++ b/.github/workflows/update-komica.yml
@@ -37,5 +37,5 @@ jobs:
                   git config --global user.name "github-actions[bot]"
                   git config --global user.email "github-actions[bot]@users.noreply.github.com"
                   git add data/komica-trends.json
-                  git commit -m "update komica trends [CI] $(date -u '+%Y-%m-%d %H:%M:%S')" || echo "Nothing to commit"
+                  git commit -m "update komica trends [CI] $(TZ=Asia/Taipei date '+%Y-%m-%d %H:%M:%S')" || echo "Nothing to commit"
                   git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
