remove gamer trends script from package.json

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "scrape:google": "tsx scripts/google-trends.ts",
         "scrape:ptt": "tsx scripts/ptt-trends.ts",
-        "scrape:komica": "tsx scripts/komica-trends.ts",
-        "scrape:gamer": "tsx scripts/gamer-trends.ts"
+        "scrape:komica": "tsx scripts/komica-trends.ts"
     },
     "keywords": [],
     "author": "",
