--- a/.github/workflows/update-komica.yml
+++ b/.github/workflows/update-komica.yml
@@ -34,8 +34,8 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  git config --global user.name "github-actions[bot]"
-                  git config --global user.email "github-actions[bot]@users.noreply.github.com"
+                  git config --global user.name "Gary Lin"
+                  git config --global user.email "garylin0969@gmail.com"
                   git add data/komica-trends.json
                   git commit -m "update komica trends [CI] $(TZ=Asia/Taipei date '+%Y-%m-%d %H:%M:%S')" || echo "Nothing to commit"
                   git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
