--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "scrape:google": "tsx scripts/google-trends.ts",
         "scrape:ptt": "tsx scripts/ptt-trends.ts",
-        "scrape:komica": "tsx scripts/komica-trends.ts"
+        "scrape:komica": "tsx scripts/komica-trends.ts",
+        "scrape:reddit": "tsx scripts/reddit-trends.ts"
     },
     "keywords": [],
     "author": "",
