--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "scrape:google": "tsx scripts/google-trends.ts",
         "scrape:ptt": "tsx scripts/ptt-trends.ts",
         "scrape:komica": "tsx scripts/komica-trends.ts",
-        "scrape:reddit": "tsx scripts/reddit-trends.ts"
+        "scrape:reddit": "tsx scripts/reddit-trends.ts",
+        "scrape:bbc": "tsx scripts/bbc-trends.ts"
     },
     "keywords": [],
     "author": "",
@@ -15,7 +16,8 @@
     "description": "",
     "dependencies": {
         "axios": "^1.10.0",
-        "puppeteer": "^24.11.2"
+        "puppeteer": "^24.11.2",
+        "rss-parser": "^3.13.0"
     },
     "devDependencies": {
         "@types/cheerio": "^1.0.0",
