--- a/.github/workflows/bbc-google.yml
+++ b/.github/workflows/bbc-google.yml
@@ -34,8 +34,8 @@ jobs:
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
               run: |
-                  git config --global user.name "Gary Lin"
-                  git config --global user.email "garylin0969@gmail.com"
+                  git config --global user.name "github-actions[bot]"
+                  git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
                   # 先保存爬蟲的新資料
                   cp data/bbc-trends.json /tmp/bbc-trends.json
